# DjQuotes

./: README.md  dotenv  main.py  pyproject.toml
hw10/hw10/: migration.py  models.py  settings.py  urls.py  utils.py
hw10/quotes/: urls.py  views.py
hw10/quotes/__pycache__/migrations/: 0001_initial.py
hw10/quotes/templates/quotes/: base.html  index.html
hw10/quotes/templates/quotes/old/: index1.html
hw10/users/: forms.py  urls.py  views.py
hw10/users/migrations/: 0001_initial.py
hw10/utils/: json_to_mongodb.py  migration.py
