[tool.poetry]
name = "djanqu"
version = "0.1.0"
description = ""
authors = ["OleksaSolo <9095945@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"
python-dotenv = "^1.0.0"
pymongo = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
